Release 2.42.3

Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.42.3 - March ??, 2011




2.42.2 - January 25, 2011

    Updated the Logtalk compiler in order to allow checking for module
    predicate properties without requiring importing the predicates into
    "user" (note, however, that the module must still be loaded prior to
    the compilation of source files calling the module predicates).

    Updated the Logtalk compiler in order to check compile-time instantiated
    closure arguments on call/2-N goals for common programming errors.

    Updated the Logtalk compiler in order to generate warnings for lambda
    expressions with variables that are not declared as either free variables
    or lambda parameters or with variables that are declared as both free
    variables and lambda parameters. Thanks to Jan Burse for suggesting
    these sanity checks.

    Updated the Logtalk runtime in order to support using the <</2 control
    construct in closure meta-arguments of meta-predicates.

    Added support for compiling Free/Goal lambda expression calls (by
    automatically generating an auxiliary predicate whenever possible).

    Added a compile_aux_clauses/1 public method, based on a predicate with
    the same name in SWI-Prolog, to the built-in object "logtalk". This
    method is usually called from goal_expansion/2 hooks in order to compile
    auxiliary clauses generated for supporting an expanded goal.

    Added the meta-predicate ignore/1, implemented by some Prolog compilers
    as a built-in predicate, as a Logtalk built-in method.

    Updated the SWI-Prolog config file in order to prevent the auto-loading