@@ -15,7 +15,12 @@ RELEASE NOTES
 
 2.42.3 - March ??, 2011
 
-
+    Corrected a bug on the code that simplifies the predicate clause
+    generated by the compilation of a grammar rule. The code would loop
+    when a grammar rule contained a meta-variable, which the Logtalk
+    compiler should (but currently don't) report as illegal (the call/1
+    control construct should be used instead on this case). Thanks to
+    Hibeus for the bug report.
 
 
 2.42.2 - January 25, 2011
